# LambdaX

./: CMakeLists.txt
example/: fib.lx  main.lx  rtx.lx  test.lx
example/gl/: Makefile  build.ninja  glfw.lx  main.lx
example/gl/src/: gl.lx  glfw.lx  main.lx  stb_image.lx
example/rtx/: .gitignore  Makefile  build.ninja  hittable.lx  main.lx  ray.lx  record.lx  sphere.lx  std.lx  vec3.lx
example/rtx/src/: camera.lx  dielectric.lx  hittable.lx  hittable_list.lx  interval.lx  lambertian.lx  main.lx  material.lx  metal.lx  ppm.lx  ray.lx  record.lx  sphere.lx  std.lx  util.lx  vec3.lx
include/LX/: AST.hpp  ArgParser.hpp  Builder.hpp  Context.hpp  Error.hpp  LX.hpp  Linker.hpp  Operator.hpp  Parameter.hpp  Parser.hpp  SourceLocation.hpp  Token.hpp  Type.hpp  Value.hpp
src/lang/: main.cpp
src/lib/: arg_parser.cpp  builder.cpp  context.cpp  error.cpp  linker.cpp  operator.cpp  parameter.cpp  source_location.cpp  value.cpp
src/lib/ast/: binary_expr.cpp  call_expr.cpp  cast_expr.cpp  const_char_expr.cpp  const_float_expr.cpp  const_function_expr.cpp  const_int_expr.cpp  const_string_expr.cpp  const_struct_expr.cpp  define_expr.cpp  del_expr.cpp  expr.cpp  function.cpp  function_stmt.cpp  global.cpp  global_stmt.cpp  immutable_expr.cpp  import.cpp  import_stmt.cpp  member_expr.cpp  mutable_expr.cpp  new_expr.cpp  sequence_expr.cpp  stmt.cpp  subscript_expr.cpp  switch_expr.cpp  symbol_expr.cpp  ternary_expr.cpp  unary_expr.cpp
src/lib/parser/: next.cpp  parse.cpp  parse_binary.cpp  parse_call.cpp  parse_cast.cpp  parse_const_function.cpp  parse_const_struct.cpp  (+25 more)
(+11 files in other folders)
